engine/src/main/java/me/molybdenum/ambience_mini/engine/client/configuration/syntactic_analysis/Parser.java
package me.molybdenum.ambience_mini.engine.client.configuration.syntactic_analysis;

import me.molybdenum.ambience_mini.engine.client.configuration.abstract_syntax.expression.*;
import me.molybdenum.ambience_mini.engine.client.configuration.abstract_syntax.config.*;
import me.molybdenum.ambience_mini.engine.client.configuration.abstract_syntax.schedule.*;
import me.molybdenum.ambience_mini.engine.client.configuration.abstract_syntax.playlist.*;
import me.molybdenum.ambience_mini.engine.client.configuration.abstract_syntax.type.*;
import me.molybdenum.ambience_mini.engine.client.configuration.abstract_syntax.misc.*;
import me.molybdenum.ambience_mini.engine.client.configuration.messages.Message;
import me.molybdenum.ambience_mini.engine.client.configuration.messages.SynError;

import java.io.InputStream;
import java.util.ArrayList;

/* The required start of a Coco/R grammar file. "Program" specifies the starting symbol of the grammar. */


public class Parser {
	public static final int _EOF = 0;
	public static final int _IDENT = 1;
	public static final int _INT = 2;
	public static final int _FLOAT = 3;
	public static final int _STRING = 4;
	public static final int maxT = 59;

	static final boolean _T = true;
	static final boolean _x = false;
	static final int minErrDist = 2;

	Token t;    // last recognized token
	Token la;   // lookahead token
	int errDist = minErrDist;

	Scanner scanner;
	Errors errors;

	Config mainNode = null; // This contains the AST generated by calling parser.Parse().

    private static String removeFirstAndLast(String str) {
        return str.substring(1, str.length() - 1);
    }

/*------------------------------------------------------------------------*/
/* The following section contains the token specification of Dims.*/


	public Parser() { }

	void SynErr (int n) {
		if (errDist >= minErrDist) errors.SynErr(la.line, la.col, n);
		errDist = 0;
	}

	void Get () {
		for (;;) {
			t = la;
			la = scanner.Scan();
			if (la.kind <= maxT) {
				++errDist;
				break;
			}

			la = t;
		}
	}

	void Expect (int n) {
		if (la.kind==n) Get(); else { SynErr(n); }
	}

	boolean StartOf (int s) {
		return set[s][la.kind];
	}

	void ExpectWeak (int n, int follow) {
		if (la.kind == n) Get();
		else {
			SynErr(n);
			while (!StartOf(follow)) Get();
		}
	}

	boolean WeakSeparator (int n, int syFol, int repFol) {
		int kind = la.kind;
		if (kind == n) { Get(); return true; }
		else if (StartOf(repFol)) return false;
		else {
			SynErr(n);
			while (!(set[syFol][kind] || set[repFol][kind] || set[0][kind])) {
				Get();
				kind = la.kind;
			}
			return StartOf(syFol);
		}
	}

	void File() {
		mainNode = Conf();
	}

	Config  Conf() {
		Config  conf;
		conf = null; 
		if (la.kind == 5) {
			Get();
			Expect(1);
			IdentP ident = new IdentP(t.val, t.line); 
			Expect(6);
			Playlist play = Play();
			Expect(7);
			Config inner = Conf();
			conf = new PlaylistDecl(ident, play, inner); 
		} else if (StartOf(1)) {
			Schedule schedule = Shed();
			conf = new ScheduleDecl(schedule); 
		} else SynErr(60);
		return conf;
	}

	Playlist  Play() {
		Playlist  play;
		play = PlayTerm();
		while (la.kind == 8) {
			Get();
			Playlist play2 = PlayTerm();
			play = new Concat(play, play2); 
		}
		return play;
	}

	Schedule  Shed() {
		Schedule  schedule;
		schedule = null; boolean instant = false; 
		switch (la.kind) {
		case 15: {
			Get();
			if (la.kind == 16) {
				Get();
				instant = true; 
			}
			Playlist pl = Play();
			IntLit priority = null; 
			if (la.kind == 17) {
				Get();
				Expect(2);
				priority = new IntLit(Integer.parseInt(t.val), t.line); 
			}
			Expect(7);
			schedule = new Play(pl, instant, priority); 
			break;
		}
		case 18: {
			Get();
			Expect(7);
			schedule = new Vanilla(); 
			break;
		}
		case 19: {
			Get();
			ArrayList<Schedule> items = new ArrayList<>();  
			while (StartOf(1)) {
				Schedule schedule2 = Shed();
				items.add(schedule2); 
			}
			Expect(20);
			schedule = new Block(items); 
			break;
		}
		case 21: {
			Get();
			int line = t.line; 
			Expect(22);
			Expr expr = Expr();
			Expect(23);
			Schedule schedule2 = Shed();
			schedule = new When(expr, schedule2, line); 
			break;
		}
		case 24: {
			Get();
			int line = t.line; Type type = null; 
			Expect(1);
			IdentE ident = new IdentE(t.val, t.line); 
			if (la.kind == 25) {
				Get();
				type = Type();
			}
			Expect(6);
			Expr expr = Expr();
			Expect(26);
			Schedule shed = Shed();
			schedule = new Let(type, ident, expr, shed, line); 
			break;
		}
		case 27: {
			Get();
			schedule = Shed();
			break;
		}
		case 28: {
			Get();
			int line = t.line; 
			Schedule schedule2 = Shed();
			schedule = new Interrupt(schedule2, line); 
			break;
		}
		default: SynErr(61); break;
		}
		return schedule;
	}

	Playlist  PlayTerm() {
		Playlist  play;
		play = new Nil(); 
		if (la.kind == 9) {
			Get();
			if (StartOf(2)) {
				Playlist load = PlayTerm();
				play = load;      
				while (la.kind == 10) {
					Get();
					load = PlayTerm();
					play = new Concat(play, load); 
				}
			}
			Expect(11);
		} else if (la.kind == 1) {
			Get();
			play = new IdentP(t.val, t.line); 
		} else if (la.kind == 12) {
			Get();
		} else if (la.kind == 4) {
			Get();
			StringLit file = new StringLit(removeFirstAndLast(t.val)); int line = t.line; var args = new ArgList(); 
			if (la.kind == 13) {
				Get();
				args = MusicArgs();
				Expect(14);
			}
			play = new Load(file, args, line); 
		} else SynErr(62);
		return play;
	}

	ArgList  MusicArgs() {
		ArgList  args;
		args = new ArgList(); 
		Arg arg1 = MusicArg();
		if (arg1 != null) args.add(arg1); 
		while (la.kind == 10) {
			Get();
			Arg arg2 = MusicArg();
			if (arg2 != null) args.add(arg2); 
		}
		return args;
	}

	Arg  MusicArg() {
		Arg  arg;
		arg = null; 
		if (la.kind == 2 || la.kind == 3) {
			if (la.kind == 3) {
				Get();
			} else {
				Get();
			}
			arg = new Arg(new IdentP("gain", t.line), new FloatLit(Float.parseFloat(t.val))); 
		} else if (la.kind == 1) {
			Get();
			IdentP ident = new IdentP(t.val, t.line); Expr value = new BoolLit(true); 
			if (la.kind == 6) {
				Get();
				value = Const();
			}
			arg = new Arg(ident, value); 
		} else SynErr(63);
		return arg;
	}

	Expr  Const() {
		Expr  expr;
		expr = null;                                        
		switch (la.kind) {
		case 48: {
			Get();
			expr = new UndefinedLit();                          
			break;
		}
		case 49: {
			Get();
			expr = new BoolLit(true);                           
			break;
		}
		case 50: {
			Get();
			expr = new BoolLit(false);                          
			break;
		}
		case 2: {
			Get();
			expr = new IntLit(Integer.parseInt(t.val), t.line); 
			break;
		}
		case 3: {
			Get();
			expr = new FloatLit(Float.parseFloat(t.val));       
			break;
		}
		case 4: {
			Get();
			expr = new StringLit(removeFirstAndLast(t.val));    
			break;
		}
		default: SynErr(64); break;
		}
		return expr;
	}

	Expr  Expr() {
		Expr  expr;
		BinaryOperators op; int line = -1; 
		expr = ExprEq();
		while (la.kind == 29 || la.kind == 30) {
			if (la.kind == 29) {
				Get();
				op = BinaryOperators.AND; line = t.line; 
			} else {
				Get();
				op = BinaryOperators.OR; line = t.line; 
			}
			Expr expr2 = ExprEq();
			expr = new BinaryOp(op, expr, expr2, line); 
		}
		return expr;
	}

	Type  Type() {
		Type  type;
		type = null; 
		switch (la.kind) {
		case 51: {
			Get();
			type = BoolT.INSTANCE; 
			break;
		}
		case 52: {
			Get();
			type = IntT.INSTANCE; 
			break;
		}
		case 53: {
			Get();
			type = FloatT.INSTANCE; 
			break;
		}
		case 54: {
			Get();
			type = StringT.INSTANCE; 
			break;
		}
		case 55: {
			Get();
			type = AreaT.INSTANCE; 
			break;
		}
		case 56: {
			Get();
			type = CombatantT.INSTANCE; 
			break;
		}
		case 5: {
			Get();
			type = PlaylistT.INSTANCE; 
			break;
		}
		case 57: {
			Get();
			Expect(13);
			Type elemType = Type();
			Expect(14);
			type = new ListT(elemType); 
			break;
		}
		case 58: {
			Get();
			Expect(13);
			Type elemType1 = Type();
			Expect(10);
			Type elemType2 = Type();
			Expect(14);
			type = new MapT(elemType1, elemType2); 
			break;
		}
		default: SynErr(65); break;
		}
		return type;
	}

	Expr  ExprEq() {
		Expr  expr;
		BinaryOperators op; int line = -1; 
		expr = ExprRel();
		while (StartOf(3)) {
			if (la.kind == 31 || la.kind == 32 || la.kind == 33) {
				if (la.kind == 31) {
					Get();
					op = BinaryOperators.EQ; line = t.line; 
				} else if (la.kind == 32) {
					Get();
					op = BinaryOperators.APP_EQ; line = t.line; 
				} else {
					Get();
					op = BinaryOperators.MATCH; line = t.line; 
				}
				Expr expr2 = ExprRel();
				expr = new BinaryOp(op, expr, expr2, line); 
			} else {
				Get();
				line = t.line; 
				Expr expr2 = ExprRel();
				expr = new UnaryOp(UnaryOperators.NOT, new BinaryOp(BinaryOperators.EQ, expr, expr2, line), line); 
			}
		}
		return expr;
	}

	Expr  ExprRel() {
		Expr  expr;
		int line = -1; 
		expr = ExprAdd();
		while (StartOf(4)) {
			if (la.kind == 13) {
				Get();
				line = t.line; 
				Expr expr2 = ExprAdd();
				expr = new BinaryOp(BinaryOperators.LT, expr, expr2, line); 
			} else if (la.kind == 14) {
				Get();
				line = t.line; 
				Expr expr2 = ExprAdd();
				expr = new BinaryOp(BinaryOperators.LT, expr2, expr, line); 
			} else if (la.kind == 35) {
				Get();
				line = t.line; 
				Expr expr2 = ExprAdd();
				expr = new BinaryOp(BinaryOperators.LE, expr, expr2, line); 
			} else {
				Get();
				line = t.line; 
				Expr expr2 = ExprAdd();
				expr = new BinaryOp(BinaryOperators.LE, expr2, expr, line); 
			}
		}
		return expr;
	}

	Expr  ExprAdd() {
		Expr  expr;
		BinaryOperators op; int line = -1; 
		expr = ExprMul();
		while (la.kind == 37 || la.kind == 38) {
			if (la.kind == 37) {
				Get();
				op = BinaryOperators.MUL; line = t.line; 
			} else {
				Get();
				op = BinaryOperators.DIV; line = t.line; 
			}
			Expr expr2 = ExprMul();
			expr = new BinaryOp(op, expr, expr2, line); 
		}
		return expr;
	}

	Expr  ExprMul() {
		Expr  expr;
		BinaryOperators op; int line = -1; 
		expr = ExprPre();
		while (la.kind == 39 || la.kind == 40) {
			if (la.kind == 39) {
				Get();
				op = BinaryOperators.ADD; line = t.line; 
			} else {
				Get();
				op = BinaryOperators.SUB; line = t.line; 
			}
			Expr expr2 = ExprPre();
			expr = new BinaryOp(op, expr, expr2, line); 
		}
		return expr;
	}

	Expr  ExprPre() {
		Expr  expr;
		expr = null; UnaryOperators op; int line; 
		if (la.kind == 40 || la.kind == 41) {
			if (la.kind == 41) {
				Get();
				op = UnaryOperators.NOT; 
			} else {
				Get();
				op = UnaryOperators.NEG; 
			}
			line = t.line; 
			expr = ExprPre();
			expr = new UnaryOp(op, expr, line); 
		} else if (StartOf(5)) {
			expr = ExprSuf();
		} else SynErr(66);
		return expr;
	}

	Expr  ExprSuf() {
		Expr  expr;
		expr = ExprTerm();
		while (la.kind == 9 || la.kind == 42) {
			if (la.kind == 9) {
				Get();
				int line = t.line; 
				Expr index = Expr();
				Expect(11);
				expr = new BinaryOp(BinaryOperators.INDEXER, expr, index, line); 
			} else {
				Get();
				int line = t.line; 
				Expect(1);
				expr = new Accessor(expr, new IdentE(t.val, t.line), line); 
			}
		}
		return expr;
	}

	Expr  ExprTerm() {
		Expr  expr;
		expr = null; Quantifiers quantifier = Quantifiers.ANY; 
		switch (la.kind) {
		case 1: {
			Get();
			expr = new IdentE(t.val, t.line);                      
			break;
		}
		case 2: case 3: case 4: case 48: case 49: case 50: {
			expr = Const();
			break;
		}
		case 43: {
			Get();
			Expect(1);
			expr = new GetEvent(new IdentE(t.val, t.line));    
			break;
		}
		case 44: {
			Get();
			Expect(1);
			expr = new GetProperty(new IdentE(t.val, t.line)); 
			break;
		}
		case 45: case 46: {
			if (la.kind == 45) {
				Get();
			} else {
				Get();
				quantifier = Quantifiers.ALL; 
			}
			Expect(1);
			String identifier = t.val; int line = t.line; 
			Expect(26);
			int inLine = t.line; 
			Expr list = Expr();
			Expect(47);
			int whereLine = t.line; 
			Expr cond = Expr();
			Expect(20);
			expr = new QuantifierOp(quantifier, new IdentE(identifier, line), list, cond, inLine, whereLine); 
			break;
		}
		case 22: {
			Get();
			expr = Expr();
			Expect(23);
			break;
		}
		default: SynErr(67); break;
		}
		return expr;
	}



	public Config Parse(InputStream inputStream, ArrayList<Message> errors) {
		this.scanner = new Scanner(inputStream);
		this.errors = new Errors(errors);

		la = new Token();
		la.val = "";
		Get();
		File();
		Expect(0);

		scanner.buffer.Close();
		return mainNode;
	}

	private static final boolean[][] set = {
		{_T,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x},
		{_x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_T, _x,_x,_T,_T, _x,_T,_x,_x, _T,_x,_x,_T, _T,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x},
		{_x,_T,_x,_x, _T,_x,_x,_x, _x,_T,_x,_x, _T,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x},
		{_x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_T, _T,_T,_T,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x},
		{_x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_T,_T,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_T, _T,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x},
		{_x,_T,_T,_T, _T,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_T,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x,_x,_x,_T, _T,_T,_T,_x, _T,_T,_T,_x, _x,_x,_x,_x, _x,_x,_x,_x, _x}

	};
} // end Parser

class Errors {
	ArrayList<Message> errors;

    public Errors(ArrayList<Message> errors) {
        this.errors = errors;
    }

	public void SynErr (int line, int col, int n) {
        String s;
        switch (n) {
			case 0: s = "EOF expected"; break;
			case 1: s = "IDENT expected"; break;
			case 2: s = "INT expected"; break;
			case 3: s = "FLOAT expected"; break;
			case 4: s = "STRING expected"; break;
			case 5: s = "\"playlist\" expected"; break;
			case 6: s = "\"=\" expected"; break;
			case 7: s = "\";\" expected"; break;
			case 8: s = "\"++\" expected"; break;
			case 9: s = "\"[\" expected"; break;
			case 10: s = "\",\" expected"; break;
			case 11: s = "\"]\" expected"; break;
			case 12: s = "\"NIL\" expected"; break;
			case 13: s = "\"<\" expected"; break;
			case 14: s = "\">\" expected"; break;
			case 15: s = "\"play\" expected"; break;
			case 16: s = "\"instant\" expected"; break;
			case 17: s = "\"priority\" expected"; break;
			case 18: s = "\"use_vanilla_player\" expected"; break;
			case 19: s = "\"begin\" expected"; break;
			case 20: s = "\"end\" expected"; break;
			case 21: s = "\"when\" expected"; break;
			case 22: s = "\"(\" expected"; break;
			case 23: s = "\")\" expected"; break;
			case 24: s = "\"let\" expected"; break;
			case 25: s = "\":\" expected"; break;
			case 26: s = "\"in\" expected"; break;
			case 27: s = "\"default\" expected"; break;
			case 28: s = "\"interrupt\" expected"; break;
			case 29: s = "\"&&\" expected"; break;
			case 30: s = "\"||\" expected"; break;
			case 31: s = "\"==\" expected"; break;
			case 32: s = "\"~~\" expected"; break;
			case 33: s = "\"*~\" expected"; break;
			case 34: s = "\"!=\" expected"; break;
			case 35: s = "\"<=\" expected"; break;
			case 36: s = "\">=\" expected"; break;
			case 37: s = "\"*\" expected"; break;
			case 38: s = "\"/\" expected"; break;
			case 39: s = "\"+\" expected"; break;
			case 40: s = "\"-\" expected"; break;
			case 41: s = "\"!\" expected"; break;
			case 42: s = "\".\" expected"; break;
			case 43: s = "\"@\" expected"; break;
			case 44: s = "\"$\" expected"; break;
			case 45: s = "\"any\" expected"; break;
			case 46: s = "\"all\" expected"; break;
			case 47: s = "\"has\" expected"; break;
			case 48: s = "\"undefined\" expected"; break;
			case 49: s = "\"true\" expected"; break;
			case 50: s = "\"false\" expected"; break;
			case 51: s = "\"bool\" expected"; break;
			case 52: s = "\"int\" expected"; break;
			case 53: s = "\"float\" expected"; break;
			case 54: s = "\"string\" expected"; break;
			case 55: s = "\"area\" expected"; break;
			case 56: s = "\"combatant\" expected"; break;
			case 57: s = "\"list\" expected"; break;
			case 58: s = "\"map\" expected"; break;
			case 59: s = "??? expected"; break;
			case 60: s = "invalid Conf"; break;
			case 61: s = "invalid Shed"; break;
			case 62: s = "invalid PlayTerm"; break;
			case 63: s = "invalid MusicArg"; break;
			case 64: s = "invalid Const"; break;
			case 65: s = "invalid Type"; break;
			case 66: s = "invalid ExprPre"; break;
			case 67: s = "invalid ExprTerm"; break;
            default: s = "error " + n; break;
        }
        errors.add(new SynError(line, col, s));
    }
} // Errors
